# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2017-06-01 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Changed the included Erlang services from dict to maps usage
    * Performed manual-update for generated source files
    * Update backward-cpp

2017-05-31 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Changed license from BSD-4-Clause to MIT
    * Haskell CloudI API 1.7.0 package has a bug
      (http://hackage.haskell.org/package/cloudi)
      though it wasn't in the 1.7.0 release of this repo
      (https://github.com/CloudI/CloudI) that is fixed by
      https://github.com/CloudI/cloudi_api_haskell/commit/6cb7bf2b7797a0e922cd89a65fa8d367e2e052fb#diff-92a7fa4cc96701cc12a30c282ce7f2eaL846

2017-05-30 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Travis builds/tests with both gcc and clang

2017-05-24 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Use maps in cloudi_core helper modules
    * Remove older compatibility code for maps/dict/queue
    * Update trie

2017-05-23 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix erlang:get_stacktrace/0 usage with Erlang/OTP 20.0
    * Use maps in cloudi_core call paths that impact performance
    * Update key2value and keys1value

2017-05-16 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update quickrand

2017-05-15 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Using the CloudI API functions send_sync or recv_async during the
      service's initialization previously returned an error, but will now
      cause the service to crash, to pursue fail-fast operation and to keep
      the effect the same for both internal and external services

2017-05-05 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update msgpack

2017-05-04 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Removed the internal cloudi_core_i_logger:current_function/0 function
      since the FUNCTION_NAME macro now exists
