@@ -6,6 +6,7 @@
     * Changed the included Erlang services from dict to maps usage
     * Performed manual-update for generated source files
     * Update backward-cpp
+    * Added Haskell CloudI API source code documentation
 
 2017-05-31 Michael Truog   <mjtruog [at] gmail (dot) com>
 
